--- a/spotiq/sportiq/package.json
+++ b/spotiq/sportiq/package.json
@@ -21,7 +21,9 @@
     "mapbox-gl": "^3.8.0",
     "next": "15.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.7",
